test/Error/war.order
Defix
Renamer
Patterns
Unify
Grind
Closure
CheckPure-skip
CheckConst-skip
Capture-skip
